[package]
name = "dpn_core"
version = "0.0.3"
edition = "2021"
license = "Apache-2.0"
description = "Subnet DPN core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = { version = "0.19.0", default-features = false, features = [
    "http-rustls-tls",
    "test",
    "signing",
] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
num-derive = "0.4.1"
num-traits = "0.2.17"
ethers = "2.0.11"
utoipa = { version = "4.1.0", features = ["actix_extras"] }